# dota-predictor

./: .gitignore  README.md  pyproject.toml
src/dota_predictor/: live.py  pipeline.py
src/dota_predictor/api/: app.py
src/dota_predictor/features/: draft.py  elo.py  meta.py  roster.py
src/dota_predictor/ingest/: odds.py  opendota.py
src/dota_predictor/llm/: context.py  preview.py
src/dota_predictor/models/: baseline.py  calibration.py  gbdt.py  ingame.py
tests/: test_odds.py
